--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <footer>
 	<p style="color: rgba(239, 155, 15, 0.7)">.
 <p style="color: rgba(239, 155, 15, 0.7)">.
-        <p style="margin-bottom: 20px">Kreator: talithairsalina.15@gmail.com</p>
+        <p style="margin-bottom: 20px">Kreator: talitha.irsalina.15@gmail.com</p>
         <p style="margin-bottom: 20px">Dibuat untuk memenuhi tugas Ketahanan Pangan kelompok 7 yang beranggotakan:</p>
         <p>Raidah Rif’at (8881250019)</p>
         <p>Renata Zhafira Putri Herlia (8881250036)</p>
@@ -387,5 +387,6 @@
 </body>
 
 </html>
+
 
 
